# gha-vm-self-hosted-runner

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  README.md
.github/workflows/: README.md  docker-publish.yml  lint.yml
app/runner-manager/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
docs/: todo-self-hosted-runner-registration-token.md  todo-support-organization-self-hosted-runner.md
terraform/example/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/github-runner-manager/: .terraform.tfstate.lock.info  README.md  main.tf  outputs.tf  terraform.tf  terraform.tfvars.example  variables.tf
terraform/github-runner-vm/: README.md  main.tf  outputs.tf  terraform.tf  terraform.tfvars.example  variables.tf
